improve code by using same patterns as in other processes